Modification mineures HTML

--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
                          <a href="menu_one.html" target="_blank"><img src="../images/restaurants/la_palette_du_goût.jpg" alt="La palette du goût"></a>
                          <h4>La palette du goût</h4>
                          <p>Ménilmontant</p>
-                         <div id="heart">
+                         <div class="heart">
                             <i class="far fa-heart"></i>
                          </div>
                          </figure>
@@ -66,7 +66,7 @@
                          <a href="menu_two.html"><img src="../images/restaurants/la_note_enchantée.jpg" alt="La note enchantée"></a>
                          <h4>La note enchantée</h4>
                          <p>Charonne</p>
-                         <div id="heart">
+                         <div class="heart">
                             <i class="far fa-heart"></i>
                          </div>
                          </figure>
@@ -76,7 +76,7 @@
                          <a href="menu_three.html"><img src="../images/restaurants/a_la_française.jpg" alt="A la française"></a>
                          <h4>A la française</h4>
                          <p>Cité Rouge</p>
-                         <div id="heart">
+                         <div class="heart">
                             <i class="far fa-heart"></i>
                          </div>
                          </figure>
@@ -86,7 +86,7 @@
                          <a href="menu_four.html"><img src="../images/restaurants/le_délice_des_sens.jpg" alt="Le délice des sens"></a>
                          <h4>Le délice des sens</h4>
                          <p>Folie-Méricourt</p>
-                         <div id="heart">
+                         <div class="heart">
                             <i class="far fa-heart"></i>
                          </div>
                          </figure>
