--- a/html/menu_four.html
+++ b/html/menu_four.html
@@ -13,14 +13,14 @@
 
             <header>
                 <div id="logo">
-                    <i class="fas fa-arrow-left"></i>
+                    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                     <figure>
                         <img src="../images/logo/ohmyfood.png" alt="logo">
                     </figure>
                 </div>
                 <div id="restaurant_image">
                     <figure>
-                        <img src="../images/restaurants/le_délice_des_sens.jpg">
+                        <img src="../images/restaurants/le_délice_des_sens.jpg" alt="Image Restaurant">
                     </figure>
                 </div>
             </header>
@@ -78,17 +78,17 @@
                         <p>Revisité</p>
                         <p>22€</p>
                     </div>
-                    <di id="desserts_three">
+                    <div id="desserts_three">
                         <h3>Tiramisu</h3>
                         <p>A la noisette</p>
                         <p>23€</p>
-                    </di>
+                    </div>
                 </div>
             </section>
 
             <section>
                 <div id="order_button">
-                    <p>Commander</p>
+                    <h4>Commander</h4>
                 </div>
             </section>
 
