--- a/html/menu_two.html
+++ b/html/menu_two.html
@@ -13,14 +13,14 @@
 
             <header>
                 <div id="logo">
-                    <i class="fas fa-arrow-left"></i>
+                    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                     <figure>
                         <img src="../images/logo/ohmyfood.png" alt="logo">
                     </figure>
                 </div>
                 <div id="restaurant_image">
                     <figure>
-                        <img src="../images/restaurants/la_note_enchantée.jpg">
+                        <img src="../images/restaurants/la_note_enchantée.jpg" alt="Image Restaurant">
                     </figure>
                 </div>
             </header>
@@ -83,17 +83,17 @@
                         <p>Avec son coulis de citron</p>
                         <p>22€</p>
                     </div>
-                    <di id="desserts_three">
+                    <div id="desserts_three">
                         <h3>Tarte au citron meringuée</h3>
                         <p>Destructurée</p>
                         <p>23€</p>
-                    </di>
+                    </div>
                 </div>
             </section>
 
             <section id="order">
                 <div id="order_button">
-                    <p>Commander</p>
+                    <h4>Commander</h4>
                 </div>
             </section>
 
