--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <link rel="stylesheet" href="../css/style.css" />
+            <link rel="stylesheet" href="assets/css/style.scss" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
             <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;600&display=swap" />
             <title>OhMyFood</title>
@@ -13,13 +13,13 @@
 
              <header>
                  <figure>
-                     <a href="index.html"><img src="../images/logo/ohmyfood.png" alt="logo"></a>
+                     <a href="index.html"><img src="assets/images/logo/ohmyfood.png" alt="logo"></a>
                  </figure>
              </header>
 
-             <section id="welcome">
+             <section class="welcome">
                  <div class="city">
-                    <i id="maps" class="fas fa-map-marker-alt fa-sm" ></i>
+                    <i class="maps" class="fas fa-map-marker-alt fa-sm" ></i>
                     <p>Paris, Belleville</p>
                  </div>
                  <div class="explore">
@@ -29,7 +29,7 @@
                  </div>
              </section>
 
-             <section id="how_is_work">
+             <section class="how_is_work">
                  <h2>Fonctionnement</h2>
                  <div class="number_one">
                      <h3>1</h3>
@@ -48,12 +48,12 @@
                  </div>
              </section>
 
-             <section id="restaurants">
+             <section class="restaurants">
                  <h2>Restaurants</h2>
-                 <div id="restaurants_box">
-                     <div id="r_one">
+                 <div class="restaurants_box">
+                     <div class="r_one">
                          <figure>
-                         <a href="menu_one.html" target="_blank"><img src="../images/restaurants/la_palette_du_goût.jpg" alt="La palette du goût"></a>
+                         <a href="menu_one.html" target="_blank"><img src="assets/images/restaurants/la_palette_du_goût.jpg" alt="La palette du goût"></a>
                          <h4>La palette du goût</h4>
                          <p>Ménilmontant</p>
                          <div class="heart">
@@ -61,9 +61,9 @@
                          </div>
                          </figure>
                      </div>
-                     <div id="r_two">
+                     <div class="r_two">
                          <figure>
-                         <a href="menu_two.html"><img src="../images/restaurants/la_note_enchantée.jpg" alt="La note enchantée"></a>
+                         <a href="menu_two.html"><img src="assets/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée"></a>
                          <h4>La note enchantée</h4>
                          <p>Charonne</p>
                          <div class="heart">
@@ -71,9 +71,9 @@
                          </div>
                          </figure>
                      </div>
-                     <div id="r_three">
+                     <div class="r_three">
                          <figure>
-                         <a href="menu_three.html"><img src="../images/restaurants/a_la_française.jpg" alt="A la française"></a>
+                         <a href="menu_three.html"><img src="assets/images/restaurants/a_la_française.jpg" alt="A la française"></a>
                          <h4>A la française</h4>
                          <p>Cité Rouge</p>
                          <div class="heart">
@@ -81,9 +81,9 @@
                          </div>
                          </figure>
                      </div>
-                     <div id="r_four">
+                     <div class="r_four">
                          <figure>
-                         <a href="menu_four.html"><img src="../images/restaurants/le_délice_des_sens.jpg" alt="Le délice des sens"></a>
+                         <a href="menu_four.html"><img src="assets/images/restaurants/le_délice_des_sens.jpg" alt="Le délice des sens"></a>
                          <h4>Le délice des sens</h4>
                          <p>Folie-Méricourt</p>
                          <div class="heart">
@@ -95,13 +95,13 @@
              </section>
 
              <footer>
-                 <div id="footer">
-                     <div id="footer_logo">
+                 <div class="footer">
+                     <div class="footer_logo">
                          <figure>
-                            <img src="../images/logo/ohmyfood.png" alt="logo">
+                            <img src="assets/images/logo/ohmyfood.png" alt="logo">
                          </figure>
                      </div>
-                     <div id="footer_links">
+                     <div class="footer_links">
                          <ul>
                              <li><i class="fas fa-utensils" id="forks"></i>Proposer un restaurant</li>
                              <li><i class="fas fa-hands-helping" id="deal">Devenir partenaire</i></li>
