--- a/html/menu_one.html
+++ b/html/menu_one.html
@@ -12,73 +12,73 @@
         <body>
 
             <header>
-                <div id="logo">
+                <div class="logo">
                     <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                     <figure>
                         <img src="../images/logo/ohmyfood.png" alt="logo">
                     </figure>
                 </div>
-                <div id="restaurant_image">
+                <div class="restaurant_image">
                     <figure>
                         <img src="../images/restaurants/la_palette_du_goût.jpg" alt="Image Restaurant">
                     </figure>
                 </div>
             </header>
 
-            <section id="menu">
+            <section class="menu">
                 <h2>La palette du gout</h2>
-                <div id="heart">
+                <div class="heart">
                     <i class="far fa-heart"></i>
                 </div>
-                <div id="starters">
+                <div class="starters">
                     <h2>ENTREES</h2>
-                    <div id="starters_one">
+                    <div class="starters_one">
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'espelette</p>
                         <p>25€</p>
                     </div>
-                    <div id="starters_two">
+                    <div class="starters_two">
                         <h3>Foie gras de canard mi-cuit</h3>
                         <p>Et ses copeaux de truffe noire</p>
                         <p>35€</p>
                     </div>
-                    <div id="starters_three">
+                    <div class="starters_three">
                         <h3>Oeuf au plat</h3>
                         <p>Assaisonné à la truffe sur lit de...</p>
                         <p>20€</p>
                     </div>
                 </div>
-                <div id="dishes">
+                <div class="dishes">
                     <h2>PLATS</h2>
-                    <div id="dishes_one">
+                    <div class="dishes_one">
                         <h3>Filet de boeuf aux herbes</h3>
                         <p>Accompagnée de sa ribambelle de légumes</p>
                         <p>40€</p>
                     </div>
-                    <div id="dishes_two">
+                    <div class="dishes_two">
                         <h3>Parmentier de queue de boeuf</h3>
                         <p>A la truffe noire sur sa purée de panais</p>
                         <p>35€</p>
                     </div>
-                    <div id="dishes_three">
+                    <div class="dishes_three">
                         <h3>Filet de Turbot</h3>
                         <p>Aux agrumes</p>
                         <p>44€</p>
                     </div>
                 </div>
-                <div id="desserts">
+                <div class="desserts">
                     <h2>DESSERTS</h2>
-                    <div id="desserts_one">
+                    <div class="desserts_one">
                         <h3>Paris-Brest</h3>
                         <p>Revisité</p>
                         <p>18€</p>
                     </div>
-                    <div id="desserts_two">
+                    <div class="desserts_two">
                         <h3>Macaron au chocolat d'exception</h3>
                         <p>Et glace à la vanille de Madagascar</p>
                         <p>22€</p>
                     </div>
-                    <div id="desserts_three">
+                    <div class="desserts_three">
                         <h3>Mousse au chocolat</h3>
                         <p>Au piment d'espelette et à la truffe noire</p>
                         <p>23€</p>
@@ -86,20 +86,20 @@
                 </div>
             </section>
 
-            <section>
-                <div id="order_button">
+            <aside>
+                <div class="order_button">
                     <h4>Commander</h4>
                 </div>
-            </section>
+            </aside>
 
             <footer>
-                <div id="footer">
-                    <div id="footer_logo">
+                <div class="footer">
+                    <div class="footer_logo">
                         <figure>
                            <img src="../images/logo/ohmyfood.png" alt="logo">
                         </figure>
                     </div>
-                    <div id="footer_links">
+                    <div class="footer_links">
                         <ul>
                             <li><i class="fas fa-utensils" id="forks"></i>Proposer un restaurant</li>
                             <li><i class="fas fa-hands-helping" id="deal">Devenir partenaire</i></li>
