--- a/html/menu_three.html
+++ b/html/menu_three.html
@@ -12,73 +12,73 @@
         <body>
 
             <header>
-                <div id="logo">
+                <div class="logo">
                     <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                     <figure>
                         <img src="../images/logo/ohmyfood.png" alt="logo">
                     </figure>
                 </div>
-                <div id="restaurant_image">
+                <div class="restaurant_image">
                     <figure>
                         <img src="../images/restaurants/a_la_française.jpg" alt="Image Restaurant">
                     </figure>
                 </div>
             </header>
 
-            <section id="menu">
+            <section class="menu">
                 <h2>A la française</h2>
-                <div id="heart">
+                <div class="heart">
                     <i class="far fa-heart"></i>
                 </div>
-                <div id="starters">
+                <div class="starters">
                     <h2>ENTREES</h2>
-                    <div id="starters_one">
+                    <div class="starters_one">
                         <h3>Tartare de poulpe acidulé</h3>
                         <p>Aux zests d'orange</p>
                         <p>25€</p>
                     </div>
-                    <div id="starters_two">
+                    <div class="starters_two">
                         <h3>Velouté de légumes d'antan</h3>
                         <p>Carottes, panais, topinambour</p>
                         <p>35€</p>
                     </div>
-                    <div id="starters_three">
+                    <div class="starters_three">
                         <h3>Soupe à l'oignon</h3>
                         <p>Revisitée</p>
                         <p>20€</p>
                     </div>
                 </div>
-                <div id="dishes">
+                <div class="dishes">
                     <h2>PLATS</h2>
-                    <div id="dishes_one">
+                    <div class="dishes_one">
                         <h3>Coquilles Saint-Jacques</h3>
                         <p>Accompagnées d'une purée de panais</p>
                         <p>40€</p>
                     </div>
-                    <div id="dishes_two">
+                    <div class="dishes_two">
                         <h3>Magret de canard</h3>
                         <p>Et parmentier de pommes de terres</p>
                         <p>35€</p>
                     </div>
-                    <div id="dishes_three">
+                    <div class="dishes_three">
                         <h3>Pigeonneau d'Îles-et-Vilaine</h3>
                         <p>Sur son lit de gnocchis aux légumes</p>
                         <p>44€</p>
                     </div>
                 </div>
-                <div id="desserts">
+                <div class="desserts">
                     <h2>DESSERTS</h2>
-                    <div id="desserts_one">
+                    <div class="desserts_one">
                         <h3>Pétales de violettes-glacés</h3>
                         <p>Et purée de noisettes</p>
                         <p>18€</p>
                     </div>
-                    <div id="desserts_two">
+                    <div class="desserts_two">
                         <h3>Fondant au chocolat</h3>
                         <p>Revisité</p>
                         <p>22€</p>
                     </div>
-                    <div id="desserts_three">
+                    <div class="desserts_three">
                         <h3>Millefeuille croustillant</h3>
                         <p>Myrtilles et pâte d'amande</p>
                         <p>23€</p>
@@ -87,19 +87,19 @@
             </section>
 
             <section>
-                <div id="order_button">
+                <div class="order_button">
                     <h4>Commander</h4>
                 </div>
             </section>
 
             <footer>
-                <div id="footer">
-                    <div id="footer_logo">
+                <div class="footer">
+                    <div class="footer_logo">
                         <figure>
                            <img src="../images/logo/ohmyfood.png" alt="logo">
                         </figure>
                     </div>
-                    <div id="footer_links">
+                    <div class="footer_links">
                         <ul>
                             <li><i class="fas fa-utensils" id="forks"></i>Proposer un restaurant</li>
                             <li><i class="fas fa-hands-helping" id="deal">Devenir partenaire</i></li>
