--- a/html/menu_two.html
+++ b/html/menu_two.html
@@ -12,78 +12,78 @@
         <body>
 
             <header>
-                <div id="logo">
+                <div class="logo">
                     <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                     <figure>
                         <img src="../images/logo/ohmyfood.png" alt="logo">
                     </figure>
                 </div>
-                <div id="restaurant_image">
+                <div class="restaurant_image">
                     <figure>
                         <img src="../images/restaurants/la_note_enchantée.jpg" alt="Image Restaurant">
                     </figure>
                 </div>
             </header>
 
-            <section id="menu">
+            <section class="menu">
                 <h2>La note enchantée</h2>
-                <div id="heart">
+                <div class="heart">
                     <i class="far fa-heart"></i>
                 </div>
-                <div id="starters">
+                <div class="starters">
                     <h2>ENTREES</h2>
-                    <div id="starters_one">
+                    <div class="starters_one">
                         <h3>Ravioles de foie gras</h3>
                         <p>Accompagnés de leurs crème à la truffe</p>
                         <p>25€</p>
                     </div>
-                    <div id="starters_two">
+                    <div class="starters_two">
                         <h3>Caviar osciètre</h3>
                         <p>Sur blini à la farine de blé noir</p>
                         <p>35€</p>
                     </div>
-                    <div id="starters_three">
+                    <div class="starters_three">
                         <h3>Homard et espuma de...</h3>
                         <p>Mariné aux zest d'orange</p>
                         <p>20€</p>
                     </div>
-                    <div id="starters_four">
+                    <div class="starters_four">
                         <h3>Foie gras de canard cuit entier</h3>
                         <p>Confiture de figue et pain toasté</p>
                         <p>35€</p>
                     </div>
                 </div>
-                <div id="dishes">
+                <div class="dishes">
                     <h2>PLATS</h2>
-                    <div id="dishes_one">
+                    <div class="dishes_one">
                         <h3>Noix de coquilles Saint-Jacques</h3>
                         <p>Sur lit de purée de céleri-rave</p>
                         <p>40€</p>
                     </div>
-                    <div id="dishes_two">
+                    <div class="dishes_two">
                         <h3>Langoustine poêlée</h3>
                         <p>Purée de patate douce</p>
                         <p>35€</p>
                     </div>
-                    <div id="dishes_three">
+                    <div class="dishes_three">
                         <h3>Mijoté de queue de boeuf</h3>
                         <p>Et riz sauvage aux zests de citron</p>
                         <p>44€</p>
                     </div>
                 </div>
-                <div id="desserts">
+                <div class="desserts">
                     <h2>DESSERTS</h2>
-                    <div id="desserts_one">
+                    <div class="desserts_one">
                         <h3>Macaron noisette et chocolat</h3>
                         <p>Glace au caramel brun et sel de Guérande</p>
                         <p>18€</p>
                     </div>
-                    <div id="desserts_two">
+                    <div class="desserts_two">
                         <h3>Baba au rhum revisité</h3>
                         <p>Avec son coulis de citron</p>
                         <p>22€</p>
                     </div>
-                    <div id="desserts_three">
+                    <div class="desserts_three">
                         <h3>Tarte au citron meringuée</h3>
                         <p>Destructurée</p>
                         <p>23€</p>
@@ -91,20 +91,20 @@
                 </div>
             </section>
 
-            <section id="order">
-                <div id="order_button">
+            <section class="order">
+                <div class="order_button">
                     <h4>Commander</h4>
                 </div>
             </section>
 
             <footer>
-                <div id="footer">
-                    <div id="footer_logo">
+                <div class="footer">
+                    <div class="footer_logo">
                         <figure>
                            <img src="../images/logo/ohmyfood.png" alt="logo">
                         </figure>
                     </div>
-                    <div id="footer_links">
+                    <div class="footer_links">
                         <ul>
                             <li><i class="fas fa-utensils" id="forks"></i>Proposer un restaurant</li>
                             <li><i class="fas fa-hands-helping" id="deal">Devenir partenaire</i></li>
