--- a/index.html
+++ b/index.html
@@ -51,45 +51,49 @@
              <section class="restaurants">
                  <h2>Restaurants</h2>
                  <div class="restaurants_box">
-                     <div class="r_one">
+                     <div class="restaurants_cards">
                          <figure>
-                         <a href="menu_one.html" target="_blank"><img src="assets/images/estaurants/la_palette_du_goût.jpg" alt="La palette du goût"></a>
+                         <a href="menu_one.html" target="_blank"><img src="assets/images/restaurants/la_palette_du_goût.jpg" alt="La palette du goût"></a>
+                         </figure>
+                         <h2>Nouveau</h2>
                          <h4>La palette du goût</h4>
                          <p>Ménilmontant</p>
                          <div class="heart">
                             <i class="far fa-heart"></i>
                          </div>
-                         </figure>
                      </div>
-                     <div class="r_two">
+                     <div class="restaurants_cards">
                          <figure>
-                         <a href="menu_two.html"><img src="assets/images/estaurants/la_note_enchantée.jpg" alt="La note enchantée"></a>
+                         <a href="menu_two.html"><img src="assets/images/restaurants/la_note_enchantée.jpg" alt="La note enchantée"></a>
+                         </figure>
+                         <h2>Nouveau</h2>
                          <h4>La note enchantée</h4>
                          <p>Charonne</p>
                          <div class="heart">
                             <i class="far fa-heart"></i>
                          </div>
-                         </figure>
                      </div>
-                     <div class="r_three">
+                     <div class="restaurants_cards">
                          <figure>
-                         <a href="menu_three.html"><img src="assets/images/estaurants/a_la_française.jpg" alt="A la française"></a>
+                         <a href="menu_three.html"><img src="assets/images/restaurants/a_la_française.jpg" alt="A la française"></a>
+                         </figure>
+                         <h2>Nouveau</h2>
                          <h4>A la française</h4>
                          <p>Cité Rouge</p>
                          <div class="heart">
                             <i class="far fa-heart"></i>
                          </div>
-                         </figure>
                      </div>
-                     <div class="r_four">
+                     <div class="restaurants_cards">
                          <figure>
-                         <a href="menu_four.html"><img src="assets/images/estaurants/le_délice_des_sens.jpg" alt="Le délice des sens"></a>
+                         <a href="menu_four.html"><img src="assets/images/restaurants/le_délice_des_sens.jpg" alt="Le délice des sens"></a>
+                         </figure>
+                         <h2>Nouveau</h2>
                          <h4>Le délice des sens</h4>
                          <p>Folie-Méricourt</p>
                          <div class="heart">
                             <i class="far fa-heart"></i>
                          </div>
-                         </figure>
                      </div>
                  </div>
              </section>
@@ -97,9 +101,7 @@
              <footer>
                  <div class="footer">
                      <div class="footer_logo">
-                         <figure>
-                            <img src="assets/mages/logo/ohmyfood.png" alt="logo">
-                         </figure>
+                         <h1>ohmyfood</h1>
                      </div>
                      <div class="footer_links">
                          <ul>
