--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <li><i class="fas fa-utensils" id="forks"></i><a href="#">Proposer un restaurant</a></li>
                             <li><i class="fas fa-hands-helping" id="deal"></i><a href="#">Devenir partenaire</a></li>
                             <li><a href="#">Mentions légales</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="mailto:ohmyfood_contact@gmail.com">Contact</a></li>
                          </ul>
                      </div>
                  </div>
