Ajout loader html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         <body>
 
+             <div class="loading_spinner"><i class="fas fa-spinner spinner"></i></div>
              <header>
                  <figure>
                      <a href="index.html"><img src="assets/images/logo/ohmyfood.png" alt="logo" class="logo" ></a>
