loader and fadein menus added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                          <h4>La palette du goût</h4>
                          <p>Ménilmontant</p>
                          <div class="heart">
-                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
                          </div>
                      </div>
                      <div class="restaurants_cards">
@@ -71,7 +71,7 @@
                          <h4>La note enchantée</h4>
                          <p>Charonne</p>
                          <div class="heart">
-                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
                          </div>
                      </div>
                      <div class="restaurants_cards">
@@ -82,7 +82,7 @@
                          <h4>A la française</h4>
                          <p>Cité Rouge</p>
                          <div class="heart">
-                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
                          </div>
                      </div>
                      <div class="restaurants_cards">
@@ -93,7 +93,7 @@
                          <h4>Le délice des sens</h4>
                          <p>Folie-Méricourt</p>
                          <div class="heart">
-                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
                          </div>
                      </div>
                  </div>
