Modifications menu HTML et ajout slider selection

--- a/menu_three.html
+++ b/menu_three.html
@@ -33,70 +33,115 @@
             </section>
 
             <section class="menu">
-                <h2>A la française</h2>
+                <h2>La palette du goût</h2>
                 <div class="heart_menu">
-                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
                 <div class="menu_cards">
                 <div class="starters">
                     <h3>ENTREES</h3>
                     <div class="border"></div>
                     <div class="starters_cards">
-                        <h4>Tartare de poulpe acidulé</h4>
-                        <h5>Aux zests d'orange</h5>
-                        <p>25€</p>
+                        <div class="starters_meal">
+                            <h4 class="starters_names">Tartare de poulpe acidulé</h4>
+                            <span class="starters_side_dish">Aux zestes d'orange</span>
+                        </div>
+                            <p class="price">25€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>              
+                        <div class="starters_cards">
+                            <div class="starters_meal">
+                                <h4 class="starters_names">Velouté de légumes d'antan</h4>
+                                <span class="starters_side_dish">Carotte, panais, topinambour</span>
+                            </div>
+                                <p class="price">35€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                   
+                        <div class="starters_cards">
+                            <div class="starters_meal">
+                                <h4 class="starters_names">Soupe à l'oignon</h4>
+                                <span class="starters_side_dish">Revisitée</span>
+                            </div>
+                                <p class="price">20€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>      
                     </div>
-                    <div class="starters_cards">
-                        <h4>Velouté de légumes d'antan</h4>
-                        <h5>Carottes, panais, topinambour</h5>
-                        <p>35€</p>
+                    <div class="dishes">
+                        <h3>PLATS</h3>
+                        <div class="border"></div>
+                        <div class="dishes_cards">
+                            <div class="dishes_meal">
+                                <h4 class="dishes_names">Coquilles Saint-Jacques</h4>
+                                <span class="dishes_side_dish">Accompagnées d'une purée de panais</span>
+                            </div>
+                                <p class="price">40€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                      
+                        <div class="dishes_cards">
+                            <div class="dishes_meal">
+                                <h4 class="dishes_names">Magret de canard</h4>
+                                <span class="dishes_side_dish">Et parmentier de pommes de terre</span>
+                            </div>
+                                <p class="price">35€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                    
+                        <div class="dishes_cards">
+                            <div class="dishes_meal">
+                                <h4 class="dishes_names">Pigeonneau d’Ille-et-Vilaine</h4>
+                                <span class="dishes_side_dish">Sur son lit de gnocchis aux légumes</span>
+                            </div>
+                                <p class="price">44€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="starters_cards">
-                        <h4>Soupe à l'oignon</h4>
-                        <h5>Revisitée</h5>
-                        <p>20€</p>
+                    <div class="desserts">
+                        <h3>DESSERTS</h3>
+                        <div class="border"></div>
+                        <div class="desserts_cards">
+                            <div class="desserts_meal">
+                                <h4 class="desserts_names">Pétales de violettes glacés</h4>
+                                <span class="desserts_side_dish">Et purée de noisettes</span>
+                            </div>
+                                <p class="price">18€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>          
+                        <div class="desserts_cards">
+                            <div class="desserts_meal">
+                                <h4 class="desserts_names">Fondant au chocolat</h4>
+                                <span class="desserts_side_dish">Revisité</span>
+                            </div>
+                                <p class="price">22€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                       
+                        <div class="desserts_cards">
+                            <div class="desserts_meal">
+                                <h4 class="desserts_names">Millefeuille croustillant</h4>
+                                <span class="desserts_side_dish">Myrtilles et pâte d’amande</span>
+                            </div>
+                                <p class="price">23€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="dishes">
-                    <h3>PLATS</h3>
-                    <div class="border"></div>
-                    <div class="dishes_cards">
-                        <h4>Coquilles Saint-Jacques</h4>
-                        <h5>Accompagnées d'une purée de panais</h5>
-                        <p>40€</p>
-                    </div>
-                    <div class="dishes_cards">
-                        <h4>Magret de canard</h4>
-                        <h5>Et parmentier de pommes de terres</h5>
-                        <p>35€</p>
-                    </div>
-                    <div class="dishes_cards">
-                        <h4>Pigeonneau d'Îles-et-Vilaine</h4>
-                        <h5>Sur son lit de gnocchis aux légumes</h5>
-                        <p>44€</p>
-                    </div>
-                </div>
-                <div class="desserts">
-                    <h3>DESSERTS</h3>
-                    <div class="border"></div>
-                    <div class="desserts_cards">
-                        <h4>Pétales de violettes-glacés</h4>
-                        <h5>Et purée de noisettes</h5>
-                        <p>18€</p>
-                    </div>
-                    <div class="desserts_cards">
-                        <h4>Fondant au chocolat</h4>
-                        <h5>Revisité</h5>
-                        <p>22€</p>
-                    </div>
-                    <div class="desserts_cards">
-                        <h4>Millefeuille croustillant</h4>
-                        <h5>Myrtilles et pâte d'amande</h5>
-                        <p>23€</p>
-                    </div>
-                </div>
-                </div>
-            </section>
+                </section>
 
             <aside>
                 <div class="order_button">
