--- a/menu_four.html
+++ b/menu_four.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="assets/css/style.css" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&family=Shrikhand&display=swap" rel="stylesheet" />
-            <title>Le Délice des Sens</title>
+            <title>La Délice des Sens</title>
         </head>
 
         <body>
@@ -33,70 +33,115 @@
             </section>
 
             <section class="menu">
-                <h2>Le délice des sens</h2>
+                <h2>La délice des sens</h2>
                 <div class="heart_menu">
-                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
                 <div class="menu_cards">
                 <div class="starters">
                     <h3>ENTREES</h3>
                     <div class="border"></div>
                     <div class="starters_cards">
-                        <h4>Tartare de thon</h4>
-                        <h5>Assaisonné au yuzu</h5>
-                        <p>25€</p>
+                        <div class="starters_meal">
+                            <h4 class="starters_names">Tartare de thon</h4>
+                            <span class="starters_side_dish">Assaisonné au yuzu</span>
+                        </div>
+                            <p class="price">25€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>              
+                        <div class="starters_cards">
+                            <div class="starters_meal">
+                                <h4 class="starters_names">Bouchée de homard croustillant </h4>
+                                <span class="starters_side_dish">Et sa farandole de petits légumes</span>
+                            </div>
+                                <p class="price">35€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                   
+                        <div class="starters_cards">
+                            <div class="starters_meal">
+                                <h4 class="starters_names">Velouté de cèpes </h4>
+                                <span class="starters_side_dish">Aux truffes</span>
+                            </div>
+                                <p class="price">20€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>      
                     </div>
-                    <div class="starters_cards">
-                        <h4>Bouchée de homard croustillant</h4>
-                        <h5>Et sa farandole de petits légumes</h5>
-                        <p>35€</p>
+                    <div class="dishes">
+                        <h3>PLATS</h3>
+                        <div class="border"></div>
+                        <div class="dishes_cards">
+                            <div class="dishes_meal">
+                                <h4 class="dishes_names">Poulet rôti aux herbes de Provence </h4>
+                                <span class="dishes_side_dish">Et sa crème de truffe</span>
+                            </div>
+                                <p class="price">40€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                      
+                        <div class="dishes_cards">
+                            <div class="dishes_meal">
+                                <h4 class="dishes_names">Langouste rôtie</h4>
+                                <span class="dishes_side_dish">ÀEt ses légumes de saison</span>
+                            </div>
+                                <p class="price">35€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                    
+                        <div class="dishes_cards">
+                            <div class="dishes_meal">
+                                <h4 class="dishes_names">Côte de boeuf Angus </h4>
+                                <span class="dishes_side_dish">Et sa purée de panais</span>
+                            </div>
+                                <p class="price">44€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="starters_cards">
-                        <h4>Velouté de cèpes</h4>
-                        <h5>Aux truffes</h5>
-                        <p>20€</p>
+                    <div class="desserts">
+                        <h3>DESSERTS</h3>
+                        <div class="border"></div>
+                        <div class="desserts_cards">
+                            <div class="desserts_meal">
+                                <h4 class="desserts_names">Farandole de desserts</h4>
+                                <span class="desserts_side_dish">Du chef</span>
+                            </div>
+                                <p class="price">18€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>          
+                        <div class="desserts_cards">
+                            <div class="desserts_meal">
+                                <h4 class="desserts_names">Crème brulée </h4>
+                                <span class="desserts_side_dish">Revisitée</span>
+                            </div>
+                                <p class="price">22€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                       
+                        <div class="desserts_cards">
+                            <div class="desserts_meal">
+                                <h4 class="desserts_names">Tiramisu </h4>
+                                <span class="desserts_side_dish">À la noisette</span>
+                            </div>
+                                <p class="price">23€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="dishes">
-                    <h3>PLATS</h3>
-                    <div class="border"></div>
-                    <div class="dishes_cards_bigger">
-                        <h4>Poulet rôti aux herbes de provence</h4>
-                        <h5>Et sa crème de truffe</h5>
-                        <p>40€</p>
-                    </div>
-                    <div class="dishes_cards">
-                        <h4>Langouste rôti</h4>
-                        <h5>Et ses légumes de saisons</h5>
-                        <p>35€</p>
-                    </div>
-                    <div class="dishes_cards">
-                        <h4>Côte de boeuf angus</h4>
-                        <h5>Et sa purée de panais</h5>
-                        <p>44€</p>
-                    </div>
-                </div>
-                <div class="desserts">
-                    <h3>DESSERTS</h3>
-                    <div class="border"></div>
-                    <div class="desserts_cards">
-                        <h4>Farandole de desserts</h4>
-                        <h5>Du chef</h5>
-                        <p>18€</p>
-                    </div>
-                    <div class="desserts_cards">
-                        <h4>Crème brulée</h4>
-                        <h5>Revisité</h5>
-                        <p>22€</p>
-                    </div>
-                    <div class="desserts_cards">
-                        <h4>Tiramisu</h4>
-                        <h5>A la noisette</h5>
-                        <p>23€</p>
-                    </div>
-                </div>
-                </div>
-            </section>
+                </section>
 
             <aside>
                 <div class="order_button">
@@ -119,6 +164,6 @@
                 </div>
             </div>
         </footer>
-            
+
         </body>
 </html>
