--- a/menu_two.html
+++ b/menu_two.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="assets/css/style.css" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&family=Shrikhand&display=swap" rel="stylesheet" />
-            <title>La Note Enchantée</title>
+            <title>La palette du goût</title>
         </head>
 
         <body>
@@ -27,81 +27,121 @@
             <section class="welcome_image">
                 <div class="restaurant_image">
                     <figure>
-                        <img src="assets/images/restaurants/la_note_enchantee_menu.jpg" alt="Image Restaurant" >
+                        <img src="assets/images/restaurants/la_palette_du_gout_menu.jpg" alt="Image Restaurant" >
                     </figure>
                 </div>
             </section>
 
             <section class="menu">
-                <h2>La note enchantée</h2>
+                <h2>La palette du goût</h2>
                 <div class="heart_menu">
-                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
                 <div class="menu_cards">
                 <div class="starters">
                     <h3>ENTREES</h3>
                     <div class="border"></div>
                     <div class="starters_cards">
-                        <h4>Ravioles de foie gras</h4>
-                        <h5>Accompagnés de leurs crème à la truffe</h5>
-                        <p>25€</p>
+                        <div class="starters_meal">
+                            <h4 class="starters_names">Fricassée d'escargot</h4>
+                            <span class="starters_side_dish">Au piment d'Espelette </span>
+                        </div>
+                            <p class="price">25€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>              
+                        <div class="starters_cards">
+                            <div class="starters_meal">
+                                <h4 class="starters_names">Foie gras de canard mi-cuit</h4>
+                                <span class="starters_side_dish">Et ses copeaux de truffe noire</span>
+                            </div>
+                                <p class="price">35€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                   
+                        <div class="starters_cards">
+                            <div class="starters_meal">
+                                <h4 class="starters_names">Oeuf au plat</h4>
+                                <span class="starters_side_dish">Assaisonné à la truffe sur lit de caviar</span>
+                            </div>
+                                <p class="price">20€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>      
                     </div>
-                    <div class="starters_cards">
-                        <h4>Caviar osciètre</h4>
-                        <h5>Sur blini à la farine de blé noir</h5>
-                        <p>35€</p>
+                    <div class="dishes">
+                        <h3>PLATS</h3>
+                        <div class="border"></div>
+                        <div class="dishes_cards">
+                            <div class="dishes_meal">
+                                <h4 class="dishes_names">Filet de boeuf aux herbes</h4>
+                                <span class="dishes_side_dish">Accompagné de sa ribambelle de légumes</span>
+                            </div>
+                                <p class="price">40€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                      
+                        <div class="dishes_cards">
+                            <div class="dishes_meal">
+                                <h4 class="dishes_names">Parmentier de queue de boeuf</h4>
+                                <span class="dishes_side_dish">À la truffe noire sur sa purée de panais</span>
+                            </div>
+                                <p class="price">35€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                    
+                        <div class="dishes_cards">
+                            <div class="dishes_meal">
+                                <h4 class="dishes_names">Filet de turbot</h4>
+                                <span class="dishes_side_dish">Aux agrumes</span>
+                            </div>
+                                <p class="price">44€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="starters_cards">
-                        <h4>Homard et espuma de...</h4>
-                        <h5>Mariné aux zest d'orange</h5>
-                        <p>20€</p>
-                    </div>
-                    <div class="starters_cards">
-                        <h4>Foie gras de canard cuit entier</h4>
-                        <h5>Confiture de figue et pain toasté</h5>
-                        <p>35€</p>
+                    <div class="desserts">
+                        <h3>DESSERTS</h3>
+                        <div class="border"></div>
+                        <div class="desserts_cards">
+                            <div class="desserts_meal">
+                                <h4 class="desserts_names">Paris-Brest</h4>
+                                <span class="desserts_side_dish">Revisité</span>
+                            </div>
+                                <p class="price">18€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>          
+                        <div class="desserts_cards">
+                            <div class="desserts_meal">
+                                <h4 class="desserts_names">Macaron au chocolat d'exception</h4>
+                                <span class="desserts_side_dish">Et glace à la vanille de Madagascar</span>
+                            </div>
+                                <p class="price">22€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>                       
+                        <div class="desserts_cards">
+                            <div class="desserts_meal">
+                                <h4 class="desserts_names">Mousse au chocolat</h4>
+                                <span class="desserts_side_dish">Au piment d'Espelette et à la truffe noire</span>
+                            </div>
+                                <p class="price">23€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="dishes">
-                    <h3>PLATS</h3>
-                    <div class="border"></div>
-                    <div class="dishes_cards">
-                        <h4>Noix de coquilles Saint-Jacques</h4>
-                        <h5>Sur lit de purée de céleri-rave</h5>
-                        <p>40€</p>
-                    </div>
-                    <div class="dishes_cards">
-                        <h4>Langoustine poêlée</h4>
-                        <h5>Purée de patate douce</h5>
-                        <p>35€</p>
-                    </div>
-                    <div class="dishes_cards">
-                        <h4>Mijoté de queue de boeuf</h4>
-                        <h5>Et riz sauvage aux zests de citron</h5>
-                        <p>44€</p>
-                    </div>
-                </div>
-                <div class="desserts">
-                    <h3>DESSERTS</h3>
-                    <div class="border"></div>
-                    <div class="desserts_cards">
-                        <h4>Macaron noisette et chocolat</h4>
-                        <h5>Glace au caramel brun et sel de Guérande</h5>
-                        <p>18€</p>
-                    </div>
-                    <div class="desserts_cards">
-                        <h4>Baba au rhum revisité</h4>
-                        <h5>Avec son coulis de citron</h5>
-                        <p>22€</p>
-                    </div>
-                    <div class="desserts_cards">
-                        <h4>Tarte au citron meringuée</h4>
-                        <h5>Destructurée</h5>
-                        <p>23€</p>
-                    </div>
-                </div>
-                </div>
-            </section>
+                </section>
 
             <aside>
                 <div class="order_button">
@@ -124,6 +164,6 @@
                 </div>
             </div>
         </footer>
-
+            
         </body>
 </html>
