--- a/menu_two.html
+++ b/menu_two.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="assets/css/style.css" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&family=Shrikhand&display=swap" rel="stylesheet" />
-            <title>La palette du goût</title>
+            <title>La note enchantée</title>
         </head>
 
         <body>
@@ -27,13 +27,13 @@
             <section class="welcome_image">
                 <div class="restaurant_image">
                     <figure>
-                        <img src="assets/images/restaurants/la_palette_du_gout_menu.jpg" alt="Image Restaurant" >
+                        <img src="assets/images/restaurants/la_note_enchantee_menu.jpg" alt="Image Restaurant" >
                     </figure>
                 </div>
             </section>
 
             <section class="menu">
-                <h2>La palette du goût</h2>
+                <h2>La note enchantée</h2>
                 <div class="heart_menu">
                     <i class="fas fa-heart"></i>
                 </div>
@@ -43,8 +43,8 @@
                     <div class="border"></div>
                     <div class="starters_cards">
                         <div class="starters_meal">
-                            <h4 class="starters_names">Fricassée d'escargot</h4>
-                            <span class="starters_side_dish">Au piment d'Espelette </span>
+                            <h4 class="starters_names">Ravioles de foie gras </h4>
+                            <span class="starters_side_dish">Accompagnés de leur crème à la truffe</span>
                         </div>
                             <p class="price">25€</p>
                             <div class="check_icon">
@@ -53,8 +53,8 @@
                         </div>              
                         <div class="starters_cards">
                             <div class="starters_meal">
-                                <h4 class="starters_names">Foie gras de canard mi-cuit</h4>
-                                <span class="starters_side_dish">Et ses copeaux de truffe noire</span>
+                                <h4 class="starters_names">Caviar osciètre</h4>
+                                <span class="starters_side_dish">Sur blini à la farine de blé noir</span>
                             </div>
                                 <p class="price">35€</p>
                             <div class="check_icon">
@@ -63,10 +63,20 @@
                         </div>                   
                         <div class="starters_cards">
                             <div class="starters_meal">
-                                <h4 class="starters_names">Oeuf au plat</h4>
-                                <span class="starters_side_dish">Assaisonné à la truffe sur lit de caviar</span>
+                                <h4 class="starters_names">Homard et espuma de potiron</h4>
+                                <span class="starters_side_dish">Mariné aux zestes d'orange</span>
                             </div>
                                 <p class="price">20€</p>
+                            <div class="check_icon">
+                                <span class="check far fa-check-circle"></span>
+                            </div>
+                        </div>
+                        <div class="starters_cards">
+                            <div class="starters_meal">
+                                <h4 class="starters_names">Foie gras de canard cuit entier</h4>
+                                <span class="starters_side_dish">Confiture de figue et pain toasté</span>
+                            </div>
+                                <p class="price">35€€</p>
                             <div class="check_icon">
                                 <span class="check far fa-check-circle"></span>
                             </div>
@@ -77,8 +87,8 @@
                         <div class="border"></div>
                         <div class="dishes_cards">
                             <div class="dishes_meal">
-                                <h4 class="dishes_names">Filet de boeuf aux herbes</h4>
-                                <span class="dishes_side_dish">Accompagné de sa ribambelle de légumes</span>
+                                <h4 class="dishes_names">Noix de coquilles Saint-Jacques</h4>
+                                <span class="dishes_side_dish">Sur lit de purée de céleri-rave</span>
                             </div>
                                 <p class="price">40€</p>
                             <div class="check_icon">
@@ -87,8 +97,8 @@
                         </div>                      
                         <div class="dishes_cards">
                             <div class="dishes_meal">
-                                <h4 class="dishes_names">Parmentier de queue de boeuf</h4>
-                                <span class="dishes_side_dish">À la truffe noire sur sa purée de panais</span>
+                                <h4 class="dishes_names">Langoustine poêlée</h4>
+                                <span class="dishes_side_dish">Purée de patate douce</span>
                             </div>
                                 <p class="price">35€</p>
                             <div class="check_icon">
@@ -97,8 +107,8 @@
                         </div>                    
                         <div class="dishes_cards">
                             <div class="dishes_meal">
-                                <h4 class="dishes_names">Filet de turbot</h4>
-                                <span class="dishes_side_dish">Aux agrumes</span>
+                                <h4 class="dishes_names">Mijoté de queue de boeuf</h4>
+                                <span class="dishes_side_dish">Et riz sauvage aux zestes de citron</span>
                             </div>
                                 <p class="price">44€</p>
                             <div class="check_icon">
@@ -111,8 +121,8 @@
                         <div class="border"></div>
                         <div class="desserts_cards">
                             <div class="desserts_meal">
-                                <h4 class="desserts_names">Paris-Brest</h4>
-                                <span class="desserts_side_dish">Revisité</span>
+                                <h4 class="desserts_names">Macaron noisette et chocolat</h4>
+                                <span class="desserts_side_dish">Glace au caramel brun et sel de Guérande</span>
                             </div>
                                 <p class="price">18€</p>
                             <div class="check_icon">
@@ -121,8 +131,8 @@
                         </div>          
                         <div class="desserts_cards">
                             <div class="desserts_meal">
-                                <h4 class="desserts_names">Macaron au chocolat d'exception</h4>
-                                <span class="desserts_side_dish">Et glace à la vanille de Madagascar</span>
+                                <h4 class="desserts_names">Baba au rhum revisité</h4>
+                                <span class="desserts_side_dish">Avec son coulis de citron</span>
                             </div>
                                 <p class="price">22€</p>
                             <div class="check_icon">
@@ -131,8 +141,8 @@
                         </div>                       
                         <div class="desserts_cards">
                             <div class="desserts_meal">
-                                <h4 class="desserts_names">Mousse au chocolat</h4>
-                                <span class="desserts_side_dish">Au piment d'Espelette et à la truffe noire</span>
+                                <h4 class="desserts_names">Tarte au citron meringuée </h4>
+                                <span class="desserts_side_dish">Déstructurée</span>
                             </div>
                                 <p class="price">23€</p>
                             <div class="check_icon">
