--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
              <div class="loading_spinner"><i class="fas fa-spinner spinner"></i></div>
              <header>
                  <figure>
-                     <a href="index.html"><img src="assets/images/logo/ohmyfood.png" alt="logo" class="logo" ></a>
+                     <a href="index.html" id="header_icon"><img src="assets/images/logo/ohmyfood.png" alt="logo" class="logo" ></a>
                  </figure>
              </header>
 
@@ -50,7 +50,7 @@
              </section>
 
              <section class="restaurants" id="restaurants_anchor">
-                 <h2>Restaurants</h2>
+                 <h2 class="categories_title">Restaurants</h2>
                  <div class="restaurants_box">
                      <div class="restaurants_cards">
                          <figure>
@@ -102,7 +102,7 @@
              <footer>
                  <div>
                      <div class="footer">
-                         <h1>ohmyfood</h1>
+                         <a href="#header_icon"><h1>ohmyfood</h1></a>
                          <ul>
                             <li><i class="fas fa-utensils" id="forks"></i><a href="#">Proposer un restaurant</a></li>
                             <li><i class="fas fa-hands-helping" id="deal"></i><a href="#">Devenir partenaire</a></li>
