--- a/menu_three.html
+++ b/menu_three.html
@@ -17,7 +17,7 @@
                     </div>
                 <div class="logo">
                     <figure>
-                        <img src="assets/images/logo/ohmyfood.png" alt="logo" >
+                        <a href="index/html" id="menu_logo"><img src="assets/images/logo/ohmyfood.png" alt="logo" ></a>
                     </figure>
                 </div>
             </header>
@@ -154,7 +154,7 @@
         <footer>
             <div>
                 <div class="footer">
-                    <h1>ohmyfood</h1>
+                    <a href="#menu_logo"><h1>ohmyfood</h1></a>
                     <ul>
                        <li><i class="fas fa-utensils" id="forks"></i><a href="#">Proposer un restaurant</a></li>
                        <li><i class="fas fa-hands-helping" id="deal"></i><a href="#">Devenir partenaire</a></li>
