added minors changements

--- a/menu_four.html
+++ b/menu_four.html
@@ -9,9 +9,9 @@
             <title>La Délice des Sens</title>
         </head>
 
-        <body>
+        <body class="menu_pages">
 
-            <header>
+            <header class="menu_header">
                 <div class="arrow_return">
                     <a href="index.html#restaurants_anchor"><i class="fas fa-arrow-left"></i></a>
                     </div>
