--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
              </section>
 
              <section class="restaurants" id="restaurants_anchor">
-                 <h2 class="categories_title">Restaurants</h2>
+                 <h3 class="categories_title">Restaurants</h3>
                  <div class="restaurants_box">
                      <div class="restaurants_cards">
                          <figure>
                          <a href="menu_one.html"><img src="assets/images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût" ></a>
                          </figure>
-                         <h2>Nouveau</h2>
+                         <span>Nouveau</span>
                          <h4>La palette du goût</h4>
                          <p>Ménilmontant</p>
                          <div class="heart">
@@ -67,7 +67,7 @@
                          <figure>
                          <a href="menu_two.html"><img src="assets/images/restaurants/la_note_enchantee.jpg" alt="La note enchantée" ></a>
                          </figure>
-                         <h2>Nouveau</h2>
+                         <span>Nouveau</span>
                          <h4>La note enchantée</h4>
                          <p>Charonne</p>
                          <div class="heart">
@@ -78,7 +78,7 @@
                          <figure>
                          <a href="menu_three.html"><img src="assets/images/restaurants/a_la_francaise.jpg" alt="A la française" ></a>
                          </figure>
-                         <h2>Nouveau</h2>
+                         <span>Nouveau</span>
                          <h4>A la française</h4>
                          <p>Cité Rouge</p>
                          <div class="heart">
@@ -89,7 +89,7 @@
                          <figure>
                          <a href="menu_four.html"><img src="assets/images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens" ></a>
                          </figure>
-                         <h2>Nouveau</h2>
+                         <span>Nouveau</span>
                          <h4>Le délice des sens</h4>
                          <p>Folie-Méricourt</p>
                          <div class="heart">
