--- a/menu_four.html
+++ b/menu_four.html
@@ -88,7 +88,7 @@
                         <div class="dishes_cards">
                             <div class="dishes_meal">
                                 <h4 class="dishes_names">Langouste rôtie</h4>
-                                <span class="dishes_side_dish">ÀEt ses légumes de saison</span>
+                                <span class="dishes_side_dish">Et ses légumes de saison</span>
                             </div>
                                 <p class="price">35€</p>
                             <div class="check_icon">
